# ex_bech32

./: .gitignore  CHANGELOG.md  README.md  checksum-Elixir.ExBech32.Impl.exs  mix.exs
.github/workflows/: ci.yml  release.yml
lib/: ex_bech32.ex
lib/ex_bech32/: impl.ex
native/ex_bech32/: Cargo.toml  README.md
native/ex_bech32/src/: lib.rs
native/exbech32/: Cargo.toml
native/exbech32/src/: lib.rs
test/: ex_bech32_test.exs
