[package]
name = "ex_bech32"
version = "0.1.0"
authors = []
edition = "2024"

[lib]
name = "ex_bech32"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37.2"
bech32 = "0.11.1"

[features]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
